# omicron

./: .codespellrc  .coveragerc  .docstring.tpl  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  Makefile  README.md  README.rst  alembic.ini  index.html  mkdocs.yml  pyproject.toml  reload.sh  repo.sh  requirements_dev.txt  setup.cfg  setup.py  start_service.sh  stop_service.sh  tox.ini  versions.json
.github/workflows/: dev.yml  main.yml  master.yml  release.yml  test.yml
2.0.0/: 404.html  sitemap.xml
2.0.0.a75/: objects.inv
2.0.0.a75/_static/: Omicron_Windows10.docx
2.0.0.a75/api/triggers/: index.html
2.0.0.a75/developer/: index.html
2.0.0.a75/history/: index.html
2.0.0.a75/installation/: index.html
2.0.0.a76/: sitemap.xml
2.0.0.a76/api/omicron/: index.html
2.0.0.a76/api/security/: index.html
2.0.0.a76/api/strategy/: index.html
2.0.0.a76/api/timeframe/: index.html
2.0.0.a76/search/: search_index.json
2.0.0.a76/usage/: index.html
2.0.0/_static/: strategy_lifecycle.drawio
2.0.0/api/board/: index.html
2.0.0/api/extensions/: index.html
2.0.0/api/security/: index.html
2.0.0/api/talib/: index.html
2.0.0/css/: extra.css
2.0.0/history/: index.html
2.0.0/search/: search_index.json
2.0.0/usage/: index.html
2.0.0a65.dev/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0a65.dev/api/metrics/: index.html
2.0.0a65.dev/api/omicron/: index.html
2.0.0a65.dev/api/plotting/: index.html
2.0.0a65.dev/api/security/: index.html
2.0.0a65.dev/developer/: index.html
2.0.0a65.dev/history/: index.html
2.0.0a65.dev/installation/: index.html
2.0.0a65.dev/search/: search_index.json
2.0.0a65.dev/usage/: index.html
2.0.0a67.dev/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0a67.dev/developer/: index.html
2.0.0a67.dev/history/: index.html
2.0.0a67.dev/installation/: index.html
2.0.0a67.dev/search/: search_index.json
2.0.0a67.dev/usage/: index.html
2.0.0a68.dev/: objects.inv  sitemap.xml
2.0.0a68.dev/developer/: index.html
2.0.0a68.dev/history/: index.html
2.0.0a68.dev/installation/: index.html
2.0.0a68.dev/search/: search_index.json
2.0.0a69.dev/: 404.html  index.html  objects.inv
2.0.0a69.dev/history/: index.html
2.0.0a69.dev/search/: search_index.json
2.0.0a69.dev/usage/: index.html
2.0.0a73/: 404.html  index.html  objects.inv
2.0.0a73/developer/: index.html
2.0.0a73/history/: index.html
2.0.0a73/installation/: index.html
2.0.0a73/search/: search_index.json
2.0.0a73/usage/: index.html
2.0.0a78/: index.html  objects.inv
alembic/: env.py
docs/: Makefile  api.md  conf.py  developer.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  omicron.client.rst  omicron.config.rst  omicron.core.rst  omicron.dal.rst  omicron.models.rst  omicron.rst  usage.md  usage.rst
docs/api/: accelerate.md  board.md  calendar.md  client.md  extensions.md  fund.md  lang.md  metrics.md  omicron.md  plotting.md  security.md  stock.md  strategy.md  talib.md  timeframe.md  triggers.md  types.md
docs/api/dal/: flux.md  (+2 more)
latest/: 404.html  index.html
latest/developer/: index.html
latest/history/: index.html
latest/installation/: index.html
latest/usage/: index.html
notebooks/: conner_rsi.ipynb
omicron/: __init__.py  cli.py
omicron/client/: __init__.py  quotes_fetcher.py
omicron/config/: __init__.py  calendar.json  calendar.py  cfg4py_auto_gen.py  defaults.yaml  dev.yaml  production.yaml  schema.py  test.yaml
omicron/core/: __init__.py  accelerate.py  backtestlog.py  constants.py  errors.py  events.py  frametrigger.py  intervaltrigger.py  lang.py  lib.py  numpy_extensions.py  quotes_fetcher.py  remote.py  talib.py  timeframe.py  tradetimeintervaltrigger.py  triggers.py  types.py
omicron/dal/: __init__.py  cache.py  flux.py  haystore.py  influxclient.py  influxdb.py  postgres.py  security_cache.py
omicron/extension/: numpy.py
omicron/extensions/: __init__.py  decimals.py  np.py  numpy.py
omicron/features/: maths.py  momentum.py  morpha.py  rank.py  ta.py
omicron/models/: __init__.py  board.py  calendar.py  funds.py  securities.py  security.py  stock.py  timeframe.py  valuation.py
omicron/notify/: dingtalk.py  mail.py
omicron/plotting/: candlestick.py  metrics.py
omicron/sametime/: __init__.py  example.py
omicron/strategy/: base.py  sma.py
omicron/talib/: __init__.py  common.py  core.py  indicators.py  metrics.py  morph.py  patterns.py
tests/: 000001.XSHG.1d.csv  __init__.py  pyrightconfig.json  test_accl.py  test_cache.py  test_client.py  test_fetcher_interface.py  test_maths.py  test_momentum.py  test_morpha.py  test_omicron.py  test_securities.py  test_security.py  test_timeframe.py  test_triggers.py  test_types.py  test_valuation.py
tests/config/: __init__.py  clickhouse.txt  defaults.yml
tests/core/: test_backtestlog.py  test_errors.py  test_lib.py  test_numpy_extensions.py  test_talib.py  test_timeframe.py  test_triggers.py  test_types.py
tests/dal/: test_cache.py  test_flux.py  test_haystore.py  test_influxclient.py
tests/data/: 000001.XSHE.15m.csv  000001.XSHE.1d.csv  000001.XSHE.1m.csv  000001.XSHE.1w.csv  000001.XSHE.30m.csv  000001.XSHE.5m.csv  000001.XSHE.60m.csv  000001.XSHG.1m.csv  000002.XSHE.1d.csv  000002.XSHE.1m.csv  000002.XSHE.1w.csv  000002.XSHE.30m.csv  000004.XSHE.1d.csv  000004.XSHE.1m.csv  000004.XSHE.1w.csv  000004.XSHE.30m.csv  600000.XSHG.1d.csv  README.md  bars_1d.pkl  bars_1m.pkl  limits.csv  stock_bars_flux_query.txt  test_strategy.pkl
tests/extensions/: test_decimals.py  test_np.py
tests/models/: test_board.py  test_calendar.py  test_funds.py  test_securities.py  test_security.py  test_stock.py  test_timeframe.py
tests/notify/: test_dingtalk.py  test_mail.py
tests/performance/: influx.py  readme.md  serializer.py
tests/strategy/: test_base.py  test_strategy.py
tests/talib/: test_common.py  test_indicators.py  test_metrics.py  test_morph.py  test_patterns.py  test_talib.py
tests/talibtest/: test_core.py  test_morph.py
(+87 files in other folders)
