[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"


[tool.poetry.dev-dependencies]
[tool.poetry]
name = "zillionare-omicron"
packages = [
    {include = "omicron"}
]
version = "2.1.1a2"
description = "Core Library for Zillionare"
authors = ["jieyu <code@jieyu.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://zillionare-omicron.readthedocs.io"
repository = "https://github.com/zillionare/omicron"
documentation = "https://zillionare-omicron.readthedocs.io"
keywords = ["AI", "quant", "trade", "stock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
include = [
    "LICENSE",
    "README.md",
    "HISTORY.md",
    "AUTHORS.md",
    "docs/*",
    "tests/*"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

aiohttp = "^3.8.0"
aiosmtplib = "^1.1.6"
arrow = "^1.2"
Bottleneck = "^1.3.8"
cfg4py = ">=0.9"
ciso8601 = "^2.2.0"
ckwrap = "^1.2"
deprecation = "^2.1.0"
empyrical-reloaded = "^0.5.8"
httpx = "^0.23.0"
numpy = "^1.22"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
sh = "1.14.1"
zigzag-reload = "^0.3.4"
zillionare-core-types = ">=0.6"

black = {version = "^22.3.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "4.0.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pre-commit = {version = "^2.17.0", optional = true}
pytest  = { version = "^7.0.1", optional = true}
pytest-asyncio = { version = "^0.23", optional = true}
pytest-cov  = { version = "^3.0.0", optional = true}
tox  = { version = "^3.24.5", optional = true}
pip  = { version = "^22.0.3", optional = true}
psutil  = { version = "^5.7.3", optional = true}
unittest-parametrize = {version = "^1.4", optional = true}

mkdocs  = { version = "^1.3.0", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.2.3", optional = true}
mkdocs-material  = { version = "^8.1.11", optional = true}
mkdocstrings  = { version = "^0.18.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.3", optional = true}
mkdocs-autorefs = {version = "^0.3.1", optional = true}
toml = {version = "^0.10.2", optional = true}
twine  = { version = "^3.8.0", optional = true}
livereload = {version = "^2.6.3", optional = true}
pyreadline = {version = "^2.1", optional = true}
mike = { version="^1.1.2", optional=true}
freezegun = {version = "^1.2.1", optional = true}

plotly = "^5.10.0"
TA-Lib = {version = "^0.4.25", platform = "linux"}
retry = {version = "^0.9.2"}
redis = {extras = ["hiredis"], version = "^5.0.3"}
clickhouse_connect = { version = "^0.7" }
pypinyin = "^0.51.0"
pandera = {version = ">=0.18.3", optional = true}

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "psutil",
    "freezegun",
    "pytest-asyncio",
    "unittest-parametrize"
    ]

dev = ["tox", "pre-commit", "pip", "twine", "toml", "pandera"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "Jinja2",
    "livereload",
    "mike"
    ]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.history
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"

[tool.pylint.MASTER]
ignore-paths = "tests/**"
